--- a/client/src/app/blog/add-post/add-post.component.html
+++ b/client/src/app/blog/add-post/add-post.component.html
@@ -1,18 +1,18 @@
 <div fxLayout="column" fxLayoutAlign="space-around center" style="width:100%; margin: 2%">
   <mat-form-field appearance="outline" fxFlex style="width:70%">
     <mat-label>Title</mat-label>
-    <input matInput placeholder="Maximum length: 30 characters">
+    <input matInput [(ngModel)]="post.title" placeholder="Maximum length: 30 characters">
   </mat-form-field>
 
   <mat-form-field appearance="outline" fxFlex style="width:70%">
     <mat-label>Description</mat-label>
-    <textarea matInput></textarea>
+    <textarea matInput [(ngModel)]="post.description"></textarea>
     <mat-hint>To give reader idea about your post</mat-hint>
   </mat-form-field>
 
   <mat-form-field appearance="outline" fxFlex style="width:70%; margin-top: 24px">
     <mat-label>Body</mat-label>
-    <textarea matInput style="height: 200px"></textarea>
+    <textarea matInput [(ngModel)]="post.content" style="height: 200px"></textarea>
     <mat-hint>Your content goes here</mat-hint>
   </mat-form-field>
 </div>
