--- a/client/src/app/blog/view-post/view-post.component.html
+++ b/client/src/app/blog/view-post/view-post.component.html
@@ -1,7 +1,7 @@
-<div style="padding: 2% 10%">
+<div style="padding: 2% 20%">
     <h1>{{post.title}}</h1>
     <br>
-    <img src= {{post.url}}>
+    <img width="100%" src= {{post.url}}>
     <br><br>
     <p>{{post.content}}</p>
 </div>
