about and contact

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -36,7 +36,7 @@
 <nav class="topnav" id="myTopnav">
   <a routerLink = 'home' routerLinkActive="active">Home</a>
   <a routerLink = 'blog' routerLinkActive="active">Blog</a>
-  <a href="#about" routerLinkActive="active">About Us</a>
+  <a routerLink = 'about' routerLinkActive="active">About Us</a>
   <div class="dropdown">
   <a class="dropdown-toggle" data-toggle="dropdown" href="#people">People
     <span class="caret"></span></a>
@@ -45,7 +45,7 @@
       <a href="#">Students</a>
     </div>
   </div>
-  <a href="#contact">Contact Us</a>
+  <a routerLink = 'contact' routerLinkActive="active">Contact Us</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
