admin dashboard teacher setup

--- a/client/src/app/admin-dashboard/admin-home/admin-home.component.html
+++ b/client/src/app/admin-dashboard/admin-home/admin-home.component.html
@@ -1,3 +1,20 @@
-<p>
-  admin-home works!
-</p>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" 
+integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+<!--
+<div>
+  <div class="row">
+    <div class="left-side">
+      <button type="button" class="btn btn-light">Light</button>
+    </div>
+
+    <div class="main">
+      abc
+    </div>
+  </div>
+
+</div>>
+-->
+ <!-- Side navigation -->
+<app-sidebar></app-sidebar> 
+
+  <!-- Page content -->
